Name:                smsdirect
Version:             0.1.1.0
Synopsis:            Library for SMSDirect
-- description:         
Homepage:            http://github.com/mvoidex/smsdirect
License:             BSD3
License-file:        LICENSE
Author:              Alexandr `Voidex` Ruchkin
Maintainer:          voidex@live.com
Build-type:          Simple
Cabal-version:       >=1.8

Library
  HS-Source-Dirs: src
  Exposed-modules:
    SMSDirect
    SMSDirect.Command
  Other-modules:
  Build-depends:
    base                >= 4.5 && < 5.0,
    old-locale          == 1.0.*,
    http-conduit        == 1.6.*,
    time                == 1.4.*,
    urlencoded          == 0.3.*,
    text                == 0.11.*,
    bytestring          >= 0.9 && < 0.11

  Ghc-Options: -Wall
